--- a/ma-page/src/components/auth/login/LoginForm.css
+++ b/ma-page/src/components/auth/login/LoginForm.css
@@ -1,7 +1,7 @@
-.MyHomePage {
+.LoginForm {
     display: flex;
-    flex-flow: column wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 10%;
+    flex-flow: column;
+    padding: 10px;
 }
